# mlops

./: Dockerfile  README.md  api.py
Taller_1/: Dockerfile  README.md  api.py  modelo.pkl  train.ipynb
Taller_Airflow/: Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
Taller_Airflow/dags/: dag_taller.py  train.py
Taller_Desarrollo_Contenedores/: README.md  docker-compose.yaml  docker-compose.yml
Taller_Desarrollo_Contenedores/MiJupyterLab/: Dockerfile  train.ipynb
Taller_Mlflow/: README.md  docker-compose.yaml
Taller_Mlflow/ServidorInferencia/: api.py  requirements.txt
Taller_Mlflow/jupyter/: entrenamiento_p.ipynb
Taller_Mlflow/mlflow/: Dockerfile
Taller_Mlflow/notebooks/: mlflow_pipeline_example.ipynb
Taller_locust/: Dockerfile.locust  README.md  docker-compose-locust.yaml  docker-compose.yaml  locustfile.py
Taller_locust/ServidorInferencia/: README.md  api.py  docker-compose.yml
Taller_locust/jupyter/: dockerfile  entrenamiento_p.ipynb
Taller_locust/notebooks/: entrenamiento_p.ipynb
proyecto_1/: .gitignore  README.md  docker-compose.yml
proyecto_1/P2/: Dockerfile  docker-compose.yaml  main.py
proyecto_1/ServidorInferencia/: Dockerfile  api.py  requirements.txt
proyecto_1/ServidorJupiter/: docker-compose.yaml
proyecto_1/ServidorJupiter/MiJupyterLab/: pyproject.toml  train.ipynb
proyecto_1/dags/: consulta_api.py  dag_consulta_api.py  train.py
proyecto_2/: .env  README.md  docker-compose-myql-train.yml  docker-compose.yml  prometheus.yml
proyecto_2/airflow/: Dockerfile  (+1 more)
proyecto_2/api/: .env  Dockerfile  main.py  pyproject.toml  scaler.pkl
proyecto_2/api/dto/: model_prediction_request.py
proyecto_2/training_app/: Dockerfile  TrainModels.ipynb  dataController.py  db.py  etl.py  model.py  models.py  pyproject.toml  raw_data_dictionary.py  train.py
(+43 files in other folders)
