[project]
name = "mijupyterlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "boto3>=1.42.68",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.0",
]
